# Funder_Site

./: .gitignore  freeze.py  index.html  pyproject.toml
.github/workflows/: static.yml
src/funder_site/templates/: index.html
